--- a/LAMWeb/package.json
+++ b/LAMWeb/package.json
@@ -12,8 +12,13 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "@websanova/vue-auth": "^3.2.3-beta",
     "axios": "^0.18.1",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-auth": "^1.0.0-alpha.1",
+    "vue-axios": "^2.1.5",
+    "vue-router-sync": "^0.1.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@quasar/app": "^1.0.0"
