fix(docker): send everything.

--- a/LAMApi/Dockerfile
+++ b/LAMApi/Dockerfile
@@ -1,8 +1,7 @@
 # STEP 1 BUILD QUASAR PROJECT
 FROM python:3.8-alpine AS python-stage
 WORKDIR /lam-rest-api
-ADD lamapi /lam-rest-api
-ADD REQUIREMENTS /lamapi
+ADD . /lam-rest-api
 RUN pip install -r REQUIREMENTS
 EXPOSE 8390
 CMD ["uwsgi", "run.ini"]
